<resources>
    <!-- APP名称和描述 -->
    <string name="app_name" translatable="false">TermPlux</string>
    <string name="app_description" translatable="false">TermPlux Project</string>
    <!-- 菜单 -->
    <string name="title_compose" translatable="false">Composable</string>
    <string name="title_fragment" translatable="false">Fragment</string>
    <string name="menu_launcher">Launcher</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_home">Home</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_manager">Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="menu_open">Open</string>
    <string name="menu_info">Info</string>
    <string name="menu_delete">Delete</string>


    <!-- 空内容 -->
    <string name="todo" translatable="false">\t</string>
    <string name="error">Error</string>
    <!-- 主页 -->
    <string name="version">Version</string>
    <string name="android_version">Android Version</string>
    <string name="shizuku_version">Shizuku Version</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="system_version">System Version</string>
    <string name="device_arch">Device Arch</string>
    <string name="device_code">Device Code</string>
    <string name="copy_info">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <!-- 应用 -->
    <string name="uninstall_tip">Click Delete to uninstall the app</string>
    <string name="uninstall_error">Can\'t uninstall system apps</string>
    <!-- 设置 -->
    <string name="app_category_title">App</string>
    <string name="dynamic_colors_title">Use the dynamic color</string>
    <string name="dynamic_colors_summary">This takes effect after you restart the app. Only Android 12+ is supported.</string>
    <string name="dynamic_colors_error">Only Android 12+ is supported.</string>
    <string name="about_title">About</string>
    <string name="about_summary">About TermPlux</string>
    <string name="uninstall_title">Delete</string>
    <string name="uninstall_summary">Uninstall TermPlux</string>
    <string name="desktop_category_title">Desktop</string>
    <string name="desktop_title">Use full desktop mode</string>
    <string name="desktop_summary">This takes effect after you restart the app. Only Android 10+ is supported.</string>
    <string name="desktop_error">Only Android 10+ is supported.</string>
    <string name="taskbar_title">Desktop mode setting</string>
    <string name="taskbar_summary">Taskbar Settings</string>
    <string name="system_category_title">System</string>
    <string name="default_launcher_title">Select the default home screen application</string>
    <string name="default_launcher_summary">Set this application as the default home screen application to enable full desktop mode on the secondary screen</string>
    <string name="system_settings_title">System settings</string>
    <string name="system_settings_summary">Open Android system Settings</string>

    <string name="error_could_not_start">不支持的应用程序</string>
    <string name="tab_layout_preview">TabLayout Preview</string>
    <string name="view_pager_preview">ViewPager2 Preview</string>
    <string name="toolbar_preview">Toolbar Preview</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>